# office-to-do-system

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  pyproject.toml
.github/workflows/: pipeline.yml
alembic/: env.py
app/: database.py  main.py
app/auth/: jwt.py  schemas.py
app/crud/: department.py  task.py  user.py
app/models/: task.py  user.py
app/router/: auth_router.py  departments.py  tasks.py  users.py
app/schemas/: department.py  task.py  user.py
frontend/: Home.py
frontend/.streamlit/: config.toml
frontend/pages/: Admin Panel.py  MyDepartment.py  Profile Settings.py
frontend/utils/: api_client.py  render_header.py
tests/: conftest.py  test_auth.py  test_department_endp.py  test_task_endp.py  test_user_endp.py  utils.py
